Fixed spacing on skills list

--- a/src/styles/career.css
+++ b/src/styles/career.css
@@ -54,8 +54,8 @@ h1 {
 .skills {
     font-size: 1.1em;
     display: flex;
-    justify-content: space-between;
-    margin: 80px 0;
+    justify-content: space-around;
+    margin: 100px 0;
 }
 .center {
     min-width: 400px;
